--- a/.gitignore
+++ b/.gitignore
@@ -120,8 +120,8 @@ uploaded_files/
 node_modules
 
 # 1\ Python
-2\ Flask
-3\ HTML\ +\ CSS
+# 2\ HTML\ +\ CSS
+3\ Flask
 4\ Django
 5\ JavaScript
 6\ Capstone
